Fix native compile for Java 24